--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,7 @@
             "purpose": "maskable"
         },
         {
-            "src": "img/logo.png",
+            "src": "img/icono.png",
             "sizes": "192x192",
             "type": "image/png"
         }
